openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ghost
  labels:
    app: ghost
spec:
  to:
    kind: Service
    name: ghost
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
